changes to the footer

--- a/about.html
+++ b/about.html
@@ -267,7 +267,7 @@
 
         <div class="col-md-12">
           <div class="copyright-info text-center">
-            <span>©2019 Buildana Engineers <a href="https://themewagon.com/"> – All rights reserved.</a></span>
+            <span>©2019 Buildana Engineers <a href="https://buildanaengineers.com"> – All rights reserved.</a></span>
           </div>
         </div>
 
