changes to the header

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                     thinking team looking for talent like.</p>
                 <p>
                   
-                  <a href="services.html" class="slider btn btn-primary">Industrial Projects</a>
-                <a href="services.html" class="slider btn btn-primary">Residential Projects</a>
+                  <a href="industrial-projects.html" class="slider btn btn-primary">Industrial Projects</a>
+                <a href="residential-projects.html" class="slider btn btn-primary">Residential Projects</a>
                 
                 </p>
               </div>
