changes to the client page

--- a/index.html
+++ b/index.html
@@ -381,7 +381,12 @@
                 </figure>
               </div><!-- Client 6 end -->
 
-              
+              <div class="col-sm-4 col-6">
+                <figure class="clients-logo">
+                    <a href="#"><img loading="lazy" class="img-fluid" src="images/clients/client8.jpg" alt="clients-logo" /></a>
+                </figure>
+              </div><!-- Client 6 end -->
+
           </div><!-- Clients row end -->
 
         </div><!-- Col end -->
