--- a/about.html
+++ b/about.html
@@ -240,7 +240,7 @@
           <h3 class="widget-title">Working Hours</h3>
           <div class="working-hours">
             We work 7 days a week, every day excluding major holidays. Contact us if you have an emergency.
-            <br><br> Monday - Friday: <span class="text-right">10:00 - 18:00</span>
+            <br> Contact: <span class="text-center">+91 779 567 4869</span>
            
           </div>
         </div><!-- Col end -->
