--- a/contact.html
+++ b/contact.html
@@ -175,7 +175,7 @@
     <div class="gap-60"></div>
 
     <div class="google-map">
-      <div id="map" class="map" data-latitude="40.712776" data-longitude="-74.005974" data-marker="images/marker.png" data-marker-name="Constra"></div>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d418.02983099075124!2d74.99022195190982!3d15.439952196009743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bb8d3f75f50dad1%3A0xf6980e16fb56fd6f!2sBuildana%20Engineers!5e0!3m2!1sen!2sin!4v1736123319368!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
     <div class="gap-40"></div>
